@@ -64,6 +64,10 @@ Do not use:
 If set, bsdtar will backup from that directory instead of the <emphasis>diskdevice</emphasis> set by the DLE. On restore, the data is restore in that directory instead of the current working directory.
 </listitem></varlistentry>
  <!-- ==== -->
+ <varlistentry><term>SPARSE</term><listitem>
+If "YES", the default, it use the -S option of bsdtar when restoring to create sparse files.
+</listitem></varlistentry>
+ <!-- ==== -->
  <varlistentry><term>STATE-DIR</term><listitem>
 The directory where ambsdtar stores the database it uses to generate incremental dumps.  The default is set when Amanda is built.
 </listitem></varlistentry>
