@@ -1,3 +1,7 @@
+2017-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* application-src/ambsdtar.c: Add a SPARSE property, default to YES
+	* man/xml-source/ambsdtar.8.xml: Document it.
+
 2017-01-20  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Report/human.pm: Fix output
 
